fixed leaderboard spacing

--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -54,6 +54,10 @@ li > a:hover {
   padding-top: 13rem;
 }
 
+.header-padding {
+  padding-top: 8rem;
+}
+
 /*----------------------------------------------------------*/
 /* header*/
 /*----------------------------------------------------------*/
